--- a/shop/templates/shop/base.html
+++ b/shop/templates/shop/base.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>{% block title %}{% endblock %}</title>
+    <title>{% block title %}Dayan{% endblock %}</title>
     <!-- Jquery -->
     <script src="https://code.jquery.com/jquery-3.6.0.js" integrity="sha256-H+K7U5CnXl1h5ywQfKtSj8PCmoN9aaq30gDh27Xc0jk=" crossorigin="anonymous"></script>
     <!-- Bootstrap -->
@@ -23,7 +23,6 @@
     <script> src="{% static 'shop/basejs.js' %}"</script>
     {% block css %}{% endblock %}
     {% block js %}{% endblock %}
-
 </head>
 <body>
     <header>
