made styles better

--- a/shop/templates/shop/base.html
+++ b/shop/templates/shop/base.html
@@ -31,9 +31,12 @@
                 <div class="col-md-12">
                     <div class="header-content">
                         <div class="header-content-inner" style="text-align: center;">
-                            <h3>
-                                DAYAN
-                            </h3>
+                            <a style="text-decoration: none; color: black;" href="">
+                                <h3>
+                                    DAYAN
+                                </h3>
+                            </a>
+                            
                             <hr>
                         </div>
                     </div>
