CustomUser app: changed profile view and added accountOverView view.
made base template file  and addes some simple style. updated profile.html to show details of account info. added 3 new fields to user model.

--- a/shop/templates/shop/base.html
+++ b/shop/templates/shop/base.html
@@ -20,7 +20,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Material+Icons+Outlined" rel="stylesheet">
     <!-- Custom CSS and JS-->
     <link rel="stylesheet" href="{% static 'shop/basestyle.css' %}">
-    <script> src="{% static 'shop/basejs.js' %}"</script>
+    <script src="{% static 'shop/basejs.js' %}"></script>
     {% block css %}{% endblock %}
     {% block js %}{% endblock %}
 </head>
@@ -31,12 +31,11 @@
                 <div class="col-md-12">
                     <div class="header-content">
                         <div class="header-content-inner" style="text-align: center;">
-                            <a style="text-decoration: none; color: black;" href="">
+                            <a style="text-decoration: none; color: black;" href="http://127.0.0.1:8000/shop/">
                                 <h3>
                                     DAYAN
                                 </h3>
                             </a>
-                            
                             <hr>
                         </div>
                     </div>
