completed the profile

--- a/CustomUser/templates/CustomUser/base.html
+++ b/CustomUser/templates/CustomUser/base.html
@@ -6,7 +6,7 @@
 {% block content %}
     <nav>
         <ul style="list-style: none">
-            <li style="margin-bottom: 10px;" ><a href="">Account OverView</a></li>
+            <li><a href="">Account OverView</a></li>
             <li><a href="orders">Orders</a></li>
             <li><a href="profile">Account info</a></li>
             <li><a href="reviews">Reviews</a></li>
