--- a/CustomUser/templates/CustomUser/login.html
+++ b/CustomUser/templates/CustomUser/login.html
@@ -16,3 +16,4 @@
 </form>
 <br>
 <b>Dont have an account?<a href="{% url 'signup' %}">Register</a><b>
+<b>Have you forgotten your password?<a href="{% url 'resetpassword' %}">Reset it</a><b>
