--- a/CustomUser/static/CustomUser/basestyle.css
+++ b/CustomUser/static/CustomUser/basestyle.css
@@ -12,3 +12,9 @@ nav > ul > li a{
     text-decoration: none;
     color: #000;
 }
+
+a{
+    color: #000;
+    cursor: pointer;
+    text-decoration: none;
+}
