Added new features
lots of things were changed and added.

--- a/CustomUser/templates/CustomUser/base.html
+++ b/CustomUser/templates/CustomUser/base.html
@@ -6,9 +6,9 @@
 {% block content %}
     <nav>
         <ul style="list-style: none">
-            <li><a href="">Account OverView</a></li>
+            <li><a href="..">Account OverView</a></li>
             <li><a href="orders">Orders</a></li>
-            <li><a href="profile">Account info</a></li>
+            <li><a href="{% url 'profile' %}">Account info</a></li>
             <li><a href="reviews">Reviews</a></li>
             <li><a href="Loves">Love List</a></li>
             <li><a href="recent">Recently Views</a></li>
