--- a/CustomUser/templates/CustomUser/edit_fit.html
+++ b/CustomUser/templates/CustomUser/edit_fit.html
@@ -7,7 +7,7 @@
 {% block main %}
     <div class="container">
         <div>
-            <h3 style="margin-bottom: 10px;">Account Info</h3>
+            <h3 style="margin-bottom: 10px;">Fit info</h3>
             <form method="post" id="update_form">
                 {% csrf_token %}
                 <div class="bigbox">
