--- a/CustomUser/templates/CustomUser/profile.html
+++ b/CustomUser/templates/CustomUser/profile.html
@@ -12,8 +12,8 @@
         </div>
     {% endif %}
     <div class="big_box" >
-        <h3>Accoun info</h3>
-        <h6><a href="edit">Edit</a></h6>
+        <h3 style="display: inline;" >Accoun info</h3>
+        <h6 style="display: inline;" ><a href="edit">Edit</a></h6>
         <div style="border: 1px solid black;">
             <div>
                 <h5>{{name}}</h5>
@@ -23,8 +23,8 @@
         </div>
     </div>
     <div class="big_box" >
-        <h3>Fit Details</h3>
-        <h6><a href="fit">Edit</a></h6>
+        <h3 style="display: inline;">Fit Details</h3>
+        <h6 style="display: inline;" ><a href="fit">Edit</a></h6>
         <div style="border: 1px solid black;">
             <div>
                 <h5>Body type: {{fit.bodytype}}</h5>
@@ -36,6 +36,11 @@
             </div>
         </div>
     </div>
+    <!-- add a big_box for addresses. list all of them and put edit and delete icon next to them. each address should has a border bottom separting it from the one below it -->
+    <div class="big_box" id="adrs-box" >
+        <h3 style="display: inline;">Addresses</h3>
+        <h6 style="display: inline;"><a href="{% url 'add_address' %}">Add</a></h6>
+    </div>
     <div class="big_box" >
         <h3>Update password</h3>
         <div style="border: 1px solid black;">
@@ -44,4 +49,65 @@
             </div>
         </div>
     </div>
+    <script>
+        // console.log(adrs_box = document.querySelectorAll('*[id^="adrs-2"]'));
+        // list all of the addresses from {{address}}. there should be province, city and  address for each of them and  put edit and delete font-awesome icon next to them. each address should have a border bottom separting it from the one below it
+        var address = {{address|safe}};
+        console.log(address);
+        for(var i = 0; i < address.length; i++){
+            console.log('HER');
+            var div = document.createElement("div");
+            if (i!=address.length-1){
+                div.style.borderBottom = "1px solid black";
+            }
+            div.style.marginBottom = "5px"; 
+            div.id = 'adrs-'+address[i].id;
+            div.style.paddingLeft = "12px";
+            html = "<h5>Province: " + address[i].province + "</h5>" + "<h5>City: " + address[i].city + "</h5>" + "<h5>Address: " + address[i].address + "</h5>";
+            // add font awesome icon to html
+            html += `<h6 style="display: inline; padding: 5px;" ><a href="edit_address/${address[i].id}"><i class='fa fa-pencil' aria-hidden='true'></i></a></h6>`;
+            html += `<h6 style="display: inline; padding: 5px;" data="dlt-adrs" id="dlt-${address[i].id}"><i class="fa fa-trash" aria-hidden="true"></i></h6>`;
+            div.innerHTML = html;
+            $("#adrs-box").append(div);
+            console.log(document.querySelector('#adrs-box > div'));
+        }
+        document.querySelectorAll('[data="dlt-adrs"]').forEach(item => {
+            item.addEventListener('click',event => {
+                var id = item.getAttribute('id').split('-')[1];
+                var adrs;
+                address.forEach(elm => {
+                    if (elm.id == id){
+                        adrs = elm;
+                    }
+                });
+                if (confirm(`Do you wish to delete this address?\n${adrs.province}, ${adrs.city}, ${adrs.address}`)){
+                    $.ajax({
+                        url: "{% url 'delete_address' %}",
+                        method: 'POST',
+                        data: {
+                            'csrfmiddlewaretoken': '{{ csrf_token }}',
+                            'adrs_id': adrs.id
+                        },
+                        success: function (data) {
+                            if (data.status == 'ok'){
+                                alert('deletd');
+                                document.getElementById('adrs-'+adrs.id).remove();
+                                adrs_box = document.querySelector('#adrs-box > div');
+                                console.log(adrs_box);
+                                if (adrs_box==undefined){
+                                    var div = document.createElement("div");
+                                    div.style.border = "1px black solid";
+                                    div.innerHTML = 'You have not yet added any addresses';
+                                    document.getElementById('adrs-box').append(div);
+                                }
+                            }else{
+                                alert('error',data.error);
+                            }
+                        }
+                    })
+                }
+            });
+        });
+        
+    </script>
 {% endblock %}
